daloradius/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daloradius
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daloradius
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: daloradius
    spec:
      containers:
      - image: danielnoblia/daloradius:1.0
        name: daloradius
        ports:
        - containerPort: 80
          name: daloradius
        volumeMounts:
        - name: daloradius-persistent-storage
          mountPath: /data
      volumes:
      - name: daloradius-persistent-storage
        persistentVolumeClaim:
          claimName: daloradius-pv-claim
