daloradius/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daloradius
spec:
  type: NodePort
  ports:
   - nodePort: 30167
     port: 80
     targetPort: 80
  selector:
    app: daloradius
