daloradius/ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: daloradius
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer-name: ca-issuer
spec:
  tls:
  - hosts:
    - daloradius.ittlabb.net
    secretName: daloradius-cert-tls
  rules:
  - host: daloradius.ittlabb.net
    http:
      paths:
      - path: /
        backend:
          serviceName: daloradius
          servicePort: 80
